<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.raflisalam.storyapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_maps"
        android:name="com.raflisalam.storyapp.ui.maps.MapsFragment"
        android:label="@string/title_maps"
        tools:layout="@layout/fragment_maps2" />
    <fragment
        android:id="@+id/navigation_paging"
        android:name="com.raflisalam.storyapp.ui.paging.PagingFragment"
        android:label="@string/title_paging" />

</navigation>