<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginActivity">

    <com.raflisalam.storyapp.ui.costumview.edittext.EmailForm
        android:id="@+id/inputEmail"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="200dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:paddingStart="10dp"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_login_email"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.raflisalam.storyapp.ui.costumview.edittext.PasswordForm
        android:id="@+id/inputPassword"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:paddingStart="10dp"
        android:inputType="textPassword"
        android:hint="@string/hint_login_password"
        app:layout_constraintTop_toBottomOf="@id/inputEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:passwordToggleEnabled="true"/>

    <include
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/button_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword"
        layout="@layout/button_progress_login"/>

    <TextView
        android:id="@+id/btnBelumDaftar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_registered_yet"
        android:textColor="@color/font"
        android:textSize="12sp"
        android:clickable="true"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginTop="25dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>